lanecwe-Prod/src/objects/BypassRules__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>used to bypass VR,WF and Triggers</description>
    <fields>
        <fullName>Disable_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Workflow_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Workflow Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>trigger_Objects__c</fullName>
        <label>trigger Objects</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>BypassRules</label>
</CustomObject>